# sdr_proj

./: .gitignore  AGENTS.md  REMOTE_MAINTENANCE_QUICKSTART.md  acoustic_logs.cmd  acoustic_logs.sh  acoustic_update.cmd  acoustic_update.sh  all_update.cmd  all_update.sh  build.ps1  build.sh  config.yaml  config.yaml.bak  config_bug_hunter.yaml  config_drone_defense.yaml  pyproject.toml  requirements.txt  rf_logs.cmd  rf_logs.sh  rf_update.cmd  rf_update.sh  run.bat  run_new.bat  setup.py  test_connection.py  test_interference.py  test_sdr_minimal.py  test_soapy_usrp.py  test_soapy_wrapper.py
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: database.py  main.py  security.py
backend/app/models/: telemetry.py
backend/app/routers/: dashboard.py  devices.py  notifications.py  reports.py  telemetry.py
backend/app/schemas/: telemetry.py
deploy/orangepi/: skyshield.env.example
deploy/orangepi/systemd/: skyshield-backend.service  skyshield-sdr-worker.service
libs/: .gitkeep
scripts/: collect_elrs_samples.py  collect_inventory.ps1  collect_inventory.sh  deploy_orangepi_update.ps1  orangepi_install.sh  remote_logs.ps1  remote_update.ps1  run_backend.sh  run_sdr_worker.sh
src/: sdr_worker.py  simulate_full_system.py  visualize_physics.py
src/iot_prototype/: esp32_filters.cpp  factory_sim.py  mpu6050_debug_helper.py
src/rf_analyzer/: __init__.py  cli.py
src/rf_analyzer/core/: __init__.py  config.py
src/rf_analyzer/engine/: __init__.py  (+1 more)
tests/: test_config.py  test_detector.py  test_signal_processor.py  test_storage.py
venv39/: pyvenv.cfg
venv39/Scripts/: activate  activate.bat
(+24 files in other folders)
